--- a/demo/webapps/WEB-INF/web.xml
+++ b/demo/webapps/WEB-INF/web.xml
@@ -4,14 +4,14 @@
                              https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
          
-    <servlet>
+    <!-- <servlet>
         <servlet-name>couleurServlet</servlet-name>
         <servlet-class>CouleurServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>couleurServlet</servlet-name>
         <url-pattern>/couleur</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping> -->
 
     <servlet>
         <servlet-name>AlimentServlet</servlet-name>
